crates/cyrus-core/tests/ui/fail/arithmetic_pos_plus_neg_not_pos.stderr
error[E0308]: mismatched types
  --> tests/ui/fail/arithmetic_pos_plus_neg_not_pos.rs:13:29
   |
13 |     let _result: F64<Pos> = a + b;
   |                  --------   ^^^^^ expected `F64<Pos>`, found `F64`
   |                  |
   |                  expected due to this
   |
   = note: expected struct `F64<Pos>`
              found struct `F64<Finite>`
